--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -38,8 +38,8 @@ jobs:
             az group create --name ${{ env.rgName }} --location ${{ env.location }}
           }
 
-      - name: Create Environment
-        run:
+      - name: Create Service Plan
+        run: |
           Write-Output "Creating Service plan..."
           az appservice plan create --name ${{ env.planName }} --resource-group ${{ env.rgName }} --sku B1
 
