--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -40,19 +40,59 @@ jobs:
             az group create --name ${{ env.rgName }} --location ${{ env.location }}
           }
 
-      - name: Create Service Plan
+      - name: Create Environment
         run: |
-          Write-Output "Creating Service plan..."
-          az appservice plan create --name ${{ env.planName }} --resource-group ${{ env.rgName }} --sku B1
+          Write-Output "\nService plan..."
+          $planExists = az appservice plan list --resource-group ${{ env.rgName }} --query "[?name=='${{ env.planName }}'].name" --output tsv
 
-          Write-Output "Creating Web App..."
-          az webapp create --name ${{ env.appName }} --plan ${{ env.planName }} --resource-group  ${{ env.rgName }} --runtime ASPNET:V4.8
+          if ($planExists -ne "")
+          {
+            Write-Output "Service plan ${{ env.planName }} already exists."
+          } 
+          else 
+          {
+            Write-Output "Service plan ${{ env.planName }} does not exist. Creating..."
+            az appservice plan create --name ${{ env.planName }} --resource-group ${{ env.rgName }} --sku B1
+          }
 
-          Write-Output "Creating $server in $location..."
-          az sql server create --name ${{ env.sqlserverName }} --resource-group ${{ env.rgName }} --location ${{ env.location }} --admin-user "fabrikamfiber-sql" --admin-password "#P@ssw0rd2025#"
+          Write-Output "\nWeb App..."
+          $webAppExists = az webapp list --resource-group ${{ env.rgName }} --query "[?name=='${{ env.appName }}'].name" --output tsv
+
+          if ($webAppExists -ne "") 
+          {
+            Write-Output "Web App ${{ env.appName }} already exists."
+          } 
+          else 
+          {
+            Write-Output "Web App ${{ env.appName }} does not exist. Creating..."
+            az webapp create --name ${{ env.appName }} --plan ${{ env.planName }} --resource-group ${{ env.rgName }} --runtime "ASPNET:V4.8"
+          }
+
+          Write-Output "\nSql Server..."
+          $sqlServerExists = az sql server list --resource-group ${{ env.rgName }} --query "[?name=='${{ env.sqlserverName }}'].name" --output tsv
+
+          if ($sqlServerExists -ne "") 
+          {
+            Write-Output "SQL Server ${{ env.sqlserverName }} already exists."
+          } 
+          else 
+          {
+            Write-Output "SQL Server ${{ env.sqlserverName }} does not exist. Creating..."
+            az sql server create --name ${{ env.sqlserverName }} --resource-group ${{ env.rgName }} --location ${{ env.location }} --admin-user "fabrikamfiber-sql" --admin-password "#P@ssw0rd2025#"
+          }
           
-          Write-Output "Creating $database on $server..."
-          az sql db create --resource-group ${{ env.rgName }} --server ${{ env.sqlserverName }} --name ${{ env.sqldbName }}
+          Write-Output "\nSql Server Database..."
+          $sqlDbExists = az sql db list --resource-group ${{ env.rgName }} --server ${{ env.sqlserverName }} --query "[?name=='${{ env.sqldbName }}'].name" --output tsv
+
+          if ($sqlDbExists -ne "") 
+          {
+            Write-Output "SQL Database ${{ env.sqldbName }} already exists."
+          } 
+          else 
+          {
+            Write-Output "SQL Database ${{ env.sqldbName }} does not exist. Creating..."
+            az sql db create --resource-group ${{ env.rgName }} --server ${{ env.sqlserverName }} --name ${{ env.sqldbName }}
+          }
 
 
       #- name: Deploy Infrastructure using Bicep
