style: adicionar saída de verificação de existência do plano
Adiciona uma mensagem de saída para indicar se o plano de serviço existe ou não. Isso melhora a visibilidade do estado do plano durante a execução do pipeline.

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -44,6 +44,7 @@ jobs:
         run: |
           Write-Output "Service plan..."
           $planExists = az appservice plan list --resource-group ${{ env.rgName }} --query "[?name=='${{ env.planName }}'].name" --output tsv
+          Write-Output "Plan Exists: $planExists"
 
           if ($planExists)
           {
