style: atualizar saída da string de conexão no pipeline
Modifica a saída da string de conexão no pipeline para incluir duas linhas distintas.
A primeira linha exibe a string de conexão usando a variável de ambiente, enquanto a segunda linha utiliza a variável diretamente.

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -163,7 +163,8 @@ jobs:
 
       - name: View SQL Connection String
         run: |
-          Write-Output "SQL Connection String = ${{ env.DB_CONNECTION_STRING }}"
+          Write-Output "SQL Connection String 1 = ${{ env.DB_CONNECTION_STRING }}"
+          Write-Output "SQL Connection String 2 = $DB_CONNECTION_STRING"
 
       - name: Azure Login
         uses: Azure/login@v2
