--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -15,29 +15,6 @@ env:
   sqldbName: db-fabrikamfiber
 
 jobs:
-  teste1:
-    runs-on: windows-latest
-    steps:
-      - name: Create Connection String
-        run: |
-          echo "DB_CONNECTION_STRING=Server" >> $GITHUB_ENV
-
-      - name: View SQL Connection String
-        run: |
-          Write-Output "SQL Connection String 1 = ${{ env.DB_CONNECTION_STRING }}"
-          Write-Output "SQL Connection String 2 = $DB_CONNECTION_STRING"
-  teste2:
-    runs-on: linux-latest
-    steps:
-      - name: Create Connection String
-        run: |
-          echo "DB_CONNECTION_STRING=Server" >> $GITHUB_ENV
-
-      - name: View SQL Connection String
-        run: |
-          Write-Output "SQL Connection String 1 = ${{ env.DB_CONNECTION_STRING }}"
-          Write-Output "SQL Connection String 2 = $DB_CONNECTION_STRING"
-
   iac:
     runs-on: windows-latest
     steps:
@@ -182,7 +159,7 @@ jobs:
       
       - name: Create Connection String
         run: |
-          echo "DB_CONNECTION_STRING=Server" >> $GITHUB_ENV
+          echo "DB_CONNECTION_STRING='Server=tcp:${{ env.sqlserverName }}.database.windows.net,1433;Initial Catalog=${{ env.sqldbName }};Persist Security Info=False;User ID=${{ secrets.SQL_USER }};Password=${{ secrets.SQL_PASSWORD }};MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;'" >> $GITHUB_ENV
 
       - name: View SQL Connection String
         run: |
