--- a/.github/workflows/testes.yml
+++ b/.github/workflows/testes.yml
@@ -24,7 +24,7 @@ jobs:
           Write-Output "SQL Connection String 1 = ${{ env.DB_CONNECTION_STRING }}"
           Write-Output "SQL Connection String 2 = $DB_CONNECTION_STRING"
   teste2:
-    runs-on: linux-latest
+    runs-on: ubuntu-latest
     steps:
       - name: Create Connection String
         run: |
