--- a/.github/workflows/testes.yml
+++ b/.github/workflows/testes.yml
@@ -32,5 +32,5 @@ jobs:
 
       - name: View SQL Connection String
         run: |
-          Write-Output "SQL Connection String 1 = ${{ env.DB_CONNECTION_STRING }}"
-          Write-Output "SQL Connection String 2 = $DB_CONNECTION_STRING"
+          echo "SQL Connection String 1 = ${{ env.DB_CONNECTION_STRING }}"
+          echo "SQL Connection String 2 = $DB_CONNECTION_STRING"
