chore: atualizar string de conexão no workflow de testes
A string de conexão foi atualizada para incluir detalhes completos, como o servidor, o banco de dados e as credenciais necessárias. Essa mudança garante que o ambiente de testes tenha acesso adequado ao banco de dados SQL, melhorando a confiabilidade dos testes executados.

--- a/.github/workflows/testes.yml
+++ b/.github/workflows/testes.yml
@@ -17,7 +17,7 @@ jobs:
     steps:
       - name: Create Connection String
         run: |
-          echo "DB_CONNECTION_STRING=Server" >> $GITHUB_ENV
+          echo "DB_CONNECTION_STRING='Server=tcp:${{ env.sqlserverName }}.database.windows.net,1433;Initial Catalog=${{ env.sqldbName }};Persist Security Info=False;User ID=${{ secrets.SQL_USER }};Password=${{ secrets.SQL_PASSWORD }};MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;'" >> $GITHUB_ENV
 
       - name: View SQL Connection String
         run: |
@@ -28,7 +28,7 @@ jobs:
     steps:
       - name: Create Connection String
         run: |
-          echo "DB_CONNECTION_STRING=Server" >> $GITHUB_ENV
+          echo "DB_CONNECTION_STRING='Server=tcp:${{ env.sqlserverName }}.database.windows.net,1433;Initial Catalog=${{ env.sqldbName }};Persist Security Info=False;User ID=${{ secrets.SQL_USER }};Password=${{ secrets.SQL_PASSWORD }};MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;'" >> $GITHUB_ENV
 
       - name: View SQL Connection String
         run: |
