style: melhorar a formatação da string de conexão no workflow de testes
Atualiza a forma como a string de conexão é criada no workflow de testes, armazenando-a em uma variável antes de escrevê-la no ambiente. Essa mudança melhora a legibilidade e a manutenção do código.

--- a/.github/workflows/testes.yml
+++ b/.github/workflows/testes.yml
@@ -17,7 +17,8 @@ jobs:
     steps:
       - name: Create Connection String
         run: |
-          Write-Output "DB_CONNECTION_STRING='Server=tcp:${{ env.sqlserverName }}.database.windows.net,1433;Initial Catalog=${{ env.sqldbName }};Persist Security Info=False;User ID=${{ secrets.SQL_USER }};Password=${{ secrets.SQL_PASSWORD }};MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;'" >> $GITHUB_ENV
+          $connectionString = "Server=tcp:${{ env.sqlserverName }}.database.windows.net,1433;Initial Catalog=${{ env.sqldbName }};Persist Security Info=False;User ID=${{ secrets.SQL_USER }};Password=${{ secrets.SQL_PASSWORD }};MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+          Write-Output "DB_CONNECTION_STRING=$connectionString" >> $GITHUB_ENV
 
       - name: View SQL Connection String
         run: |
