--- a/.github/workflows/testes.yml
+++ b/.github/workflows/testes.yml
@@ -12,19 +12,19 @@ env:
   sqldbName: db-fabrikamfiber
 
 jobs:
-  teste1:
+  teste-win:
     runs-on: windows-latest
     steps:
       - name: Create Connection String
         run: |
-          $connectionString = "Server=tcp:${{ env.sqlserverName }}.database.windows.net,1433;Initial Catalog=${{ env.sqldbName }};Persist Security Info=False;User ID=${{ secrets.SQL_USER }};Password=${{ secrets.SQL_PASSWORD }};MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+          $connectionString = "Server"
           Write-Output "DB_CONNECTION_STRING=$connectionString" >> $GITHUB_ENV
 
       - name: View SQL Connection String
         run: |
           Write-Output "SQL Connection String 1 = ${{ env.DB_CONNECTION_STRING }}"
           Write-Output "SQL Connection String 2 = $DB_CONNECTION_STRING"
-  teste2:
+  teste-linux:
     runs-on: ubuntu-latest
     steps:
       - name: Create Connection String
