--- a/.github/workflows/testes.yml
+++ b/.github/workflows/testes.yml
@@ -15,15 +15,23 @@ jobs:
   teste-win:
     runs-on: windows-latest
     steps:
+      - run: |
+          chcp 65001 #set code page to utf-8
+          echo ("BRANCH_NAME=" + $env:GITHUB_REF.replace('refs/heads/', '')) >> $env:GITHUB_ENV
+     
+      - run: echo "${{ env.BRANCH_NAME }}"
+      - run: echo $env:BRANCH_NAME
+
       - name: Create Connection String
         run: |
           $connectionString = "Server"
-          Write-Output "DB_CONNECTION_STRING=$connectionString" >> $GITHUB_ENV
+          Write-Output "DB_CONNECTION_STRING=$connectionString" >> $env:GITHUB_ENV
 
       - name: View SQL Connection String
         run: |
           Write-Output "SQL Connection String 1 = ${{ env.DB_CONNECTION_STRING }}"
-          Write-Output "SQL Connection String 2 = $DB_CONNECTION_STRING"
+          Write-Output "SQL Connection String 2 = $env:DB_CONNECTION_STRING"
+          
   teste-linux:
     runs-on: ubuntu-latest
     steps:
