--- a/.github/workflows/testes.yml
+++ b/.github/workflows/testes.yml
@@ -15,23 +15,16 @@ jobs:
   teste-win:
     runs-on: windows-latest
     steps:
-      - run: |
-          chcp 65001 #set code page to utf-8
-          echo ("BRANCH_NAME=" + $env:GITHUB_REF.replace('refs/heads/', '')) >> $env:GITHUB_ENV
-     
-      - run: echo "${{ env.BRANCH_NAME }}"
-      - run: echo $env:BRANCH_NAME
-
       - name: Create Connection String
         run: |
-          $connectionString = "Server"
+          $connectionString = "Server=tcp:${{ env.sqlserverName }}.database.windows.net,1433;Initial Catalog=${{ env.sqldbName }};Persist Security Info=False;User ID=${{ secrets.SQL_USER }};Password=${{ secrets.SQL_PASSWORD }};MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
           Write-Output "DB_CONNECTION_STRING=$connectionString" >> $env:GITHUB_ENV
 
       - name: View SQL Connection String
         run: |
           Write-Output "SQL Connection String 1 = ${{ env.DB_CONNECTION_STRING }}"
           Write-Output "SQL Connection String 2 = $env:DB_CONNECTION_STRING"
-          
+
   teste-linux:
     runs-on: ubuntu-latest
     steps:
