--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -88,6 +88,10 @@ jobs:
             az sql server create --name ${{ env.sqlserverName }} --resource-group ${{ env.rgName }} --location ${{ env.location }} --admin-user "${{ secrets.SQL_USER }}" --admin-password "${{ secrets.SQL_PASSWORD }}"
           }
       
+      - name: Configure SQL Server Firewall
+        run: |
+          az sql server firewall-rule create --resource-group ${{ env.rgName }} --server ${{ env.sqlserverName }} --name AllowYourIPRange --start-ip-address 0.0.0.0 --end-ip-address 255.255.255.255
+            
       - name: Create SQL Server database
         run: |
           Write-Output "Sql Server Database..."
@@ -161,11 +165,6 @@ jobs:
         run: |
           $connectionString = "Server=tcp:${{ env.sqlserverName }}.database.windows.net,1433;Initial Catalog=${{ env.sqldbName }};Persist Security Info=False;User ID=${{ secrets.SQL_USER }};Password=${{ secrets.SQL_PASSWORD }};MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
           Write-Output "DB_CONNECTION_STRING=$connectionString" >> $env:GITHUB_ENV
-
-      - name: View SQL Connection String
-        run: |
-          Write-Output "SQL Connection String 1 = ${{ env.DB_CONNECTION_STRING }}"
-          Write-Output "SQL Connection String 2 = $env:DB_CONNECTION_STRING"
 
       - name: Azure Login
         uses: Azure/login@v2
