style: corrigir formatação da configuração do pipeline
Ajusta a formatação da configuração do pipeline para incluir uma vírgula após o tipo de conexão SQLAzure. Essa mudança melhora a legibilidade e a consistência do arquivo de configuração.

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -192,13 +192,13 @@ jobs:
               {
                 "name": "FabrikamFiber-Express",
                 "value": "${{ env.DB_CONNECTION_STRING }}",
-                "type": "SQLAzure"
+                "type": "SQLAzure",
                 "slotSetting": false
               },
               {
                 "name": "FabrikamFiber-DataWarehouse",
                 "value": "${{ env.DB_CONNECTION_STRING }}",
-                "type": "SQLAzure"
+                "type": "SQLAzure",
                 "slotSetting": false
               }
             ]
