--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -148,6 +148,12 @@ jobs:
         with:
           name: DacPac
           path: ${{ github.workspace }}\WebDeploy\*.dacpac
+      
+      - name: Archive Sql Scripts
+        uses: actions/upload-artifact@v4
+        with:
+          name: scripts
+          path: ScriptsSql\*.sql
 
   deploy_qa:
     needs: build
@@ -156,6 +162,10 @@ jobs:
     steps:
       - name: Download artifacts
         uses: actions/download-artifact@v4
+      
+      - name: View artifacts
+        run: |
+          ls -R
       
       - name: Create Connection String
         run: |
@@ -175,7 +185,11 @@ jobs:
       - name: Deploy DacPac to Azure SQL
         run: |
           & "${{ github.workspace }}\sqlpackage\SqlPackage.exe" /Action:Publish /SourceFile:"${{ github.workspace }}\DacPac\FabrikamFiber.Database.dacpac" /TargetConnectionString:"${{ env.DB_CONNECTION_STRING }}"
-
+      
+      - name: Execute SQL Script
+        run: |
+          Invoke-Sqlcmd -ConnectionString "${{ env.DB_CONNECTION_STRING }}" -InputFile "scripts/insert-data.sql"
+      
       - name: Deploy APP
         uses: azure/webapps-deploy@v3
         with:
