style: corrigir caminho do arquivo no script SQL
Ajusta o caminho do arquivo de entrada no comando Invoke-Sqlcmd para usar barras invertidas, garantindo a compatibilidade no ambiente Windows.

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -188,7 +188,7 @@ jobs:
       
       - name: Execute SQL Script
         run: |
-          Invoke-Sqlcmd -ConnectionString "${{ env.DB_CONNECTION_STRING }}" -InputFile "scripts/insert-data.sql"
+          Invoke-Sqlcmd -ConnectionString "${{ env.DB_CONNECTION_STRING }}" -InputFile "scripts\insert-data.sql"
       
       - name: Deploy APP
         uses: azure/webapps-deploy@v3
